argocd/base/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: gateway
  name: gateway-deployment
  annotations:
    reloader.stakater.com/auto: "true"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gateway
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: gateway
    spec:
      containers:
      - image: sjc.vultrcr.com/oosa/api-gateway:v1.0.0
        name: gateway
        command: [ "/usr/bin/krakend" ]
        args: [ "run", "-d", "-c", "/etc/krakend/krakend.json", "-p", "8080" ]
        securityContext:
          allowPrivilegeEscalation: false
          runAsNonRoot: true
          runAsUser: 1000
          readOnlyRootFilesystem: true
          capabilities:
            drop:
              - ALL
            add:
              - NET_BIND_SERVICE
        livenessProbe:
          httpGet:
            path: /__health
            port: 8080
          initialDelaySeconds: 30
          periodSeconds: 30
          timeoutSeconds: 5
          successThreshold: 1
          failureThreshold: 6
        readinessProbe:
          httpGet:
            path: /__health
            port: 8080
          initialDelaySeconds: 30
          periodSeconds: 10
          timeoutSeconds: 5
          successThreshold: 1
          failureThreshold: 6
        volumeMounts:
          - name: gateway-cfg
            mountPath: /etc/krakend/krakend.json
            subPath: krakend.json
          - name: gateway-cfg
            mountPath: /doc/api.yaml
            subPath: doc-api.yaml
          - name: gateway-cfg
            mountPath: /doc/api_rules.json
            subPath: doc-api_rules.json
      volumes:
        - name: gateway-cfg
          configMap: 
            name: gateway-configmap
            items:
              - key: krakend.json
                path: krakend.json
              - key: doc-api.yaml
                path: doc-api.yaml
              - key: doc-api_rules.json
                path: doc-api_rules.json
