argocd/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gateway
spec:
  selector:
      app: gateway
  ports:
    - name: http
      port: 8080
      targetPort: 8080
      protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: oathkeeper
spec:
  selector:
      app: oathkeeper
  ports:
    - name: api-http
      port: 8056
      targetPort: 4456
      protocol: TCP
