argocd/base/Ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gateway
  annotations:
    ingress.kubernetes.io/ssl-redirect: "false"
    traefik.ingress.kubernetes.io/router.entrypoints: web
    traefik.ingress.kubernetes.io/router.middlewares: oosa-app-stripprefix-gateway@kubernetescrd,oosa-app-oathkeeper@kubernetescrd,oosa-app-notify@kubernetescrd
spec:
  rules:
  - http:
      paths:
      - path: /api/
        pathType: Prefix
        backend:
          service:
            name: gateway
            port:
              number: 8080
